fixes #7940 - increase min-width of map tooltips to avoid truncation

--- a/plugins/UserCountryMap/stylesheets/visitor-map.less
+++ b/plugins/UserCountryMap/stylesheets/visitor-map.less
@@ -234,3 +234,7 @@
     font-size: 10px;
     .native-select();
 }
+
+.ui-tooltip.qtip {
+    min-width: 100px;
+}
